[workspace]
members = [
    "owlnest",
    "memcache",
    "owlnest-proc",
    "owlnest-macro",
    "protocols/owlnest-blob",
    "owlnest-prelude",
    "protocols/owlnest-hyper",
    "protocols/owlnest-messaging",
    "protocols/owlnest-advertise",
    "protocols/template",
]
default_member = ["owlnest"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { path = "../../Owlput/rust-libp2p/libp2p", features = [
    "autonat",
    "dcutr",
    "dns",
    "ecdsa",
    "ed25519",
    "gossipsub",
    "identify",
    "json",
    "kad",
    "macros",
    "mdns",
    "memory-connection-limits",
    "metrics",
    "noise",
    "ping",
    "pnet",
    "quic",
    "relay",
    "rendezvous",
    "request-response",
    "serde",
    "tcp",
    "tls",
    "tokio",
    "uds",
    "websocket",
    "yamux",
    "upnp",
] }
futures = "0.3"
futures-timer = "3"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
derive_more = { version = "1", features = ["from"] }
