[package]
name = "owlnest-prelude"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { workspace = true, default-features = false }
futures = { workspace = true }
xxhash-rust = {version = "*",features = ["xxh3"],optional = true}

[features]
universal-protocol = ["dep:xxhash-rust"]