[package]
name = "owlnest"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
libp2p = {workspace = true, features = ["full"] }
libp2p-swarm = { workspace = true }
libp2p-tls = { workspace = true }
libp2p-noise = { workspace = true }
libp2p-yamux = { workspace = true }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-log = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "*"
xxhash-rust = { version = "*", features = ["xxh3"] }
futures = "0.3"
futures-timer = "3"
rustyline = "12"
chrono = "0.4"
owlnest-proc = { path = "../owlnest-proc" }
void = "1"
crossterm = "0.27"
owlnest-macro = {path = "../owlnest-macro"}
either = "*"
hyper={version = "1.1",features = ["http1","server","client"]}
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio-util = {version = "0.7", features = ["compat"]}