[package]
name = "owlnest"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0"
[lib]
crate-type = ["lib"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
libp2p = { workspace = true, features = ["full"] }
libp2p-swarm = { workspace = true }
libp2p-tls = { workspace = true }
libp2p-noise = { workspace = true }
libp2p-yamux = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
rand = "*"
futures-timer = "3"
futures = { workspace = true }
rustyline = "13"
chrono = "0.4"
owlnest-proc = { path = "../owlnest-proc" }
void = "1"
crossterm = "0.27"
owlnest-macro = { path = "../owlnest-macro" }
either = "*"
owlnest-blob = { path = "../protocols/owlnest-blob", optional = true }
owlnest-messaging = { path = "../protocols/owlnest-messaging", optional = true }
owlnest-advertise = { path = "../protocols/owlnest-advertise", optional = true }

[dev-dependencies]
xxhash-rust = { version = "*", features = ["xxh3"] }
serial_test = "3"

[features]
full = ["owlnest-protocols","libp2p-protocols"]
owlnest-protocols = ["dep:owlnest-blob","dep:owlnest-messaging","dep:owlnest-advertise"]
libp2p-protocols = []
test-suits = []