[package]
name = "owlnest"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0"
[lib]
crate-type = ["lib"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
libp2p = { workspace = true, default-features = false }
libp2p-swarm = { workspace = true }
libp2p-noise = { workspace = true }
libp2p-yamux = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
rand = "*"
futures-timer = "3"
futures = { workspace = true }
rustyline = "14"
chrono = "0.4"
owlnest-proc = { path = "../owlnest-proc" }
void = "1"
crossterm = "0.28"
owlnest-macro = { path = "../owlnest-macro" }
either = "*"
owlnest-blob = { path = "../protocols/owlnest-blob", optional = true }
owlnest-messaging = { path = "../protocols/owlnest-messaging", optional = true }
owlnest-advertise = { path = "../protocols/owlnest-advertise", optional = true }
toml = "*"
clap = { version = "4.5", features = ["derive"] }
shlex = "1.3"
dashmap = "*"
prettytable = "*"
printable = "*"
derive_more = { workspace = true }

[dev-dependencies]
xxhash-rust = { version = "*", features = ["xxh3"] }
serial_test = "3"
temp-dir = "*"
anyhow = "*"

[features]
full = ["owlnest-protocols", "libp2p-protocols"]
default = ["full", "volatile"]
owlnest-protocols = [
    "dep:owlnest-blob",
    "dep:owlnest-messaging",
    "dep:owlnest-advertise",
]
libp2p-protocols = []
test-suits = []
owlnest-blob = ["dep:owlnest-blob"]
owlnest-messaging = ["dep:owlnest-messaging"]
owlnest-advertise = ["dep:owlnest-advertise"]
libp2p-kad = []
libp2p-ping = []
libp2p-relay-server = []
libp2p-relay-client = []
libp2p-identify = []
libp2p-autonat = []
libp2p-mdns = []
libp2p-upnp = []
libp2p-dcutr = []
libp2p-gossipsub = []
volatile = []
persistent = []
