[package]
name = "owlport"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio ={version="1",features = ["full"]}
hyper = {version = "0.14", features = ["full"]}
tonic = "0.6.2"
tower = { version = "0.4", features = ["full"] }
tower-service = "0.3.1"
axum = "0.4.4"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.9"

[build-dependencies]
tonic-build = "0.6"