[package]
name = "owlnest-advertise"
version = "0.1.0"
edition = "2021"

[dependencies]
owlnest-prelude = { path = "../../owlnest-prelude", features = [
    "universal-protocol",
] }
owlnest-macro = { path = "../../owlnest-macro" }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "*"
toml = "*"
tokio = { workspace = true }
futures-timer = "*"

[dev-dependencies]
owlnest = { path = "../../owlnest", features = ["owlnest-protocols", "test-suits"] }
