[package]
name = "owlnest-blob"
version = "0.1.0"
edition = "2021"

[dependencies]
owlnest-prelude = { path = "../../owlnest-prelude" }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tokio = { workspace = true }
owlnest-macro = { path = "../../owlnest-macro" }
xxhash-rust = { version = "*", features = ["xxh3"] }
futures-timer = { workspace = true }
prost = "0.12"


[dev-dependencies]
serial_test = "3"
owlnest = { path = "../../owlnest", features = ["owlnest-protocols","test-suits"] }

[build-dependencies]
prost-build = "0.12"
